crates/service/tests/completion/snapshots/features__completion__import__global_type.snap
---
source: crates/service/tests/completion/import.rs
expression: response
---
[
  {
    "label": "i32",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `i32` classifies 32 bit integers."
    }
  },
  {
    "label": "i64",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `i64` classifies 64 bit integers."
    }
  },
  {
    "label": "f32",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `f32` classifies 32 bit floating-point data."
    }
  },
  {
    "label": "f64",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `f64` classifies 64 bit floating-point data."
    }
  },
  {
    "label": "v128",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `v128` corresponds to a 128 bit vector of packed integer or floating-point data."
    }
  },
  {
    "label": "anyref",
    "kind": 7
  },
  {
    "label": "eqref",
    "kind": 7
  },
  {
    "label": "i31ref",
    "kind": 7
  },
  {
    "label": "structref",
    "kind": 7
  },
  {
    "label": "arrayref",
    "kind": 7
  },
  {
    "label": "nullref",
    "kind": 7
  },
  {
    "label": "funcref",
    "kind": 7
  },
  {
    "label": "nullfuncref",
    "kind": 7
  },
  {
    "label": "exnref",
    "kind": 7
  },
  {
    "label": "nullexnref",
    "kind": 7
  },
  {
    "label": "externref",
    "kind": 7
  },
  {
    "label": "nullexternref",
    "kind": 7
  }
]
