crates/service/tests/completion/snapshots/features__completion__import__global_type_after_paren.snap
---
source: crates/service/tests/completion/import.rs
expression: response
---
[
  {
    "label": "mut",
    "kind": 14
  },
  {
    "label": "ref",
    "kind": 14
  }
]
