crates/service/tests/completion/snapshots/features__completion__import__memory_type_with_paren.snap
---
source: crates/service/tests/completion/import.rs
expression: response
---
[
  {
    "label": "pagesize",
    "kind": 14
  }
]
