crates/service/tests/completion/snapshots/features__completion__import__memory_type_with_share.snap
---
source: crates/service/tests/completion/import.rs
expression: response
---
[
  {
    "label": "i32",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `i32` classifies 32 bit integers."
    }
  },
  {
    "label": "i64",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `i64` classifies 64 bit integers."
    }
  },
  {
    "label": "shared",
    "kind": 14
  },
  {
    "label": "unshared",
    "kind": 14
  }
]
