crates/service/tests/completion/snapshots/features__completion__import__paren_after_module_name.snap
---
source: crates/service/tests/completion/import.rs
expression: response
---
[
  {
    "label": "func",
    "kind": 14
  },
  {
    "label": "table",
    "kind": 14
  },
  {
    "label": "memory",
    "kind": 14
  },
  {
    "label": "global",
    "kind": 14
  },
  {
    "label": "tag",
    "kind": 14
  },
  {
    "label": "item",
    "kind": 14
  }
]
