crates/service/tests/completion/snapshots/features__completion__import__type_use.snap
---
source: crates/service/tests/completion/import.rs
expression: response
---
[
  {
    "label": "param",
    "kind": 14
  },
  {
    "label": "result",
    "kind": 14
  },
  {
    "label": "type",
    "kind": 14
  }
]
